lib/engine/void_sower_bindings_generated.dart

/*
 * Copyright 2026 Void Sower Authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for `src/void_sower.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class VoidSowerBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  VoidSowerBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  VoidSowerBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Sets the global Abseil VLOG verbosity level.
  void void_sower_set_vlog_level(int level) {
    return _void_sower_set_vlog_level(level);
  }

  late final _void_sower_set_vlog_levelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int32)>>(
        'void_sower_set_vlog_level',
      );
  late final _void_sower_set_vlog_level = _void_sower_set_vlog_levelPtr
      .asFunction<void Function(int)>();

  void void_sower_init(int starting_cores, double boundary_y) {
    return _void_sower_init(starting_cores, boundary_y);
  }

  late final _void_sower_initPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Uint32, ffi.Float)>>(
        'void_sower_init',
      );
  late final _void_sower_init = _void_sower_initPtr
      .asFunction<void Function(int, double)>();

  int void_sower_generate_wave(ffi.Pointer<VoidSowerWaveConfigFFI> config) {
    return _void_sower_generate_wave(config);
  }

  late final _void_sower_generate_wavePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<VoidSowerWaveConfigFFI>)
        >
      >('void_sower_generate_wave');
  late final _void_sower_generate_wave = _void_sower_generate_wavePtr
      .asFunction<int Function(ffi.Pointer<VoidSowerWaveConfigFFI>)>();

  int void_sower_inject_core(int bay_index, int direction) {
    return _void_sower_inject_core(bay_index, direction);
  }

  late final _void_sower_inject_corePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint8, ffi.Int8)>>(
        'void_sower_inject_core',
      );
  late final _void_sower_inject_core = _void_sower_inject_corePtr
      .asFunction<int Function(int, int)>();

  void void_sower_slide_dreadnought(double target_x) {
    return _void_sower_slide_dreadnought(target_x);
  }

  late final _void_sower_slide_dreadnoughtPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'void_sower_slide_dreadnought',
      );
  late final _void_sower_slide_dreadnought = _void_sower_slide_dreadnoughtPtr
      .asFunction<void Function(double)>();

  void void_sower_step_simulation(double delta_time) {
    return _void_sower_step_simulation(delta_time);
  }

  late final _void_sower_step_simulationPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'void_sower_step_simulation',
      );
  late final _void_sower_step_simulation = _void_sower_step_simulationPtr
      .asFunction<void Function(double)>();

  void void_sower_damage_conduit(int bay_index) {
    return _void_sower_damage_conduit(bay_index);
  }

  late final _void_sower_damage_conduitPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Uint8)>>(
        'void_sower_damage_conduit',
      );
  late final _void_sower_damage_conduit = _void_sower_damage_conduitPtr
      .asFunction<void Function(int)>();

  void void_sower_damage_atmosphere(int penalty) {
    return _void_sower_damage_atmosphere(penalty);
  }

  late final _void_sower_damage_atmospherePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Uint32)>>(
        'void_sower_damage_atmosphere',
      );
  late final _void_sower_damage_atmosphere = _void_sower_damage_atmospherePtr
      .asFunction<void Function(int)>();

  void void_sower_grant_cores(int count) {
    return _void_sower_grant_cores(count);
  }

  late final _void_sower_grant_coresPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Uint32)>>(
        'void_sower_grant_cores',
      );
  late final _void_sower_grant_cores = _void_sower_grant_coresPtr
      .asFunction<void Function(int)>();

  void void_sower_predict_sow(
    int start_bay,
    int direction,
    ffi.Pointer<VoidSowerPredictionFFI> out_prediction,
  ) {
    return _void_sower_predict_sow(start_bay, direction, out_prediction);
  }

  late final _void_sower_predict_sowPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Uint8,
            ffi.Int8,
            ffi.Pointer<VoidSowerPredictionFFI>,
          )
        >
      >('void_sower_predict_sow');
  late final _void_sower_predict_sow = _void_sower_predict_sowPtr
      .asFunction<
        void Function(int, int, ffi.Pointer<VoidSowerPredictionFFI>)
      >();

  void void_sower_get_bays(
    ffi.Pointer<VoidSowerBayFFI> out_bays,
    int max_count,
  ) {
    return _void_sower_get_bays(out_bays, max_count);
  }

  late final _void_sower_get_baysPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<VoidSowerBayFFI>, ffi.Uint32)
        >
      >('void_sower_get_bays');
  late final _void_sower_get_bays = _void_sower_get_baysPtr
      .asFunction<void Function(ffi.Pointer<VoidSowerBayFFI>, int)>();

  int void_sower_get_enemies(
    ffi.Pointer<VoidSowerEnemyFFI> out_enemies,
    int max_count,
  ) {
    return _void_sower_get_enemies(out_enemies, max_count);
  }

  late final _void_sower_get_enemiesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Uint32 Function(ffi.Pointer<VoidSowerEnemyFFI>, ffi.Uint32)
        >
      >('void_sower_get_enemies');
  late final _void_sower_get_enemies = _void_sower_get_enemiesPtr
      .asFunction<int Function(ffi.Pointer<VoidSowerEnemyFFI>, int)>();

  int void_sower_get_lances(
    ffi.Pointer<VoidSowerLanceFFI> out_lances,
    int max_count,
  ) {
    return _void_sower_get_lances(out_lances, max_count);
  }

  late final _void_sower_get_lancesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Uint32 Function(ffi.Pointer<VoidSowerLanceFFI>, ffi.Uint32)
        >
      >('void_sower_get_lances');
  late final _void_sower_get_lances = _void_sower_get_lancesPtr
      .asFunction<int Function(ffi.Pointer<VoidSowerLanceFFI>, int)>();

  int void_sower_get_flaks(
    ffi.Pointer<VoidSowerFlakFFI> out_flaks,
    int max_count,
  ) {
    return _void_sower_get_flaks(out_flaks, max_count);
  }

  late final _void_sower_get_flaksPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Uint32 Function(ffi.Pointer<VoidSowerFlakFFI>, ffi.Uint32)
        >
      >('void_sower_get_flaks');
  late final _void_sower_get_flaks = _void_sower_get_flaksPtr
      .asFunction<int Function(ffi.Pointer<VoidSowerFlakFFI>, int)>();

  void void_sower_get_dreadnought_state(
    ffi.Pointer<VoidSowerDreadnoughtFFI> out_state,
  ) {
    return _void_sower_get_dreadnought_state(out_state);
  }

  late final _void_sower_get_dreadnought_statePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<VoidSowerDreadnoughtFFI>)
        >
      >('void_sower_get_dreadnought_state');
  late final _void_sower_get_dreadnought_state =
      _void_sower_get_dreadnought_statePtr
          .asFunction<void Function(ffi.Pointer<VoidSowerDreadnoughtFFI>)>();

  void void_sower_reset() {
    return _void_sower_reset();
  }

  late final _void_sower_resetPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('void_sower_reset');
  late final _void_sower_reset = _void_sower_resetPtr
      .asFunction<void Function()>();

  void void_sower_free() {
    return _void_sower_free();
  }

  late final _void_sower_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('void_sower_free');
  late final _void_sower_free = _void_sower_freePtr
      .asFunction<void Function()>();
}

/// @brief Flat C representation of a single capacitor bay.
@ffi.Packed(1)
final class VoidSowerBayFFI extends ffi.Struct {
  /// < 0 to 15
  @ffi.Uint8()
  external int bay_index;

  /// < 0: Inner, 1: Outer
  @ffi.Uint8()
  external int tier;

  /// < 0 to 7
  @ffi.Uint16()
  external int grid_column;

  /// < Accumulated plasma mass (M)
  @ffi.Uint32()
  external int charge_units;

  /// < Radial angle along hull ring
  @ffi.Float()
  external double radial_position_rad;

  /// < 1 if outer frontline, 0 if inner
  @ffi.Uint8()
  external int is_frontline;

  /// < 1 if Nyumba super-capacitor
  @ffi.Uint8()
  external int is_nyumba;

  /// < 1 if Kichwa vector conduit
  @ffi.Uint8()
  external int is_kichwa;

  /// < 1 if Kimbi deflection chamber
  @ffi.Uint8()
  external int is_kimbi;
}

/// @brief Flat C representation of an enemy assault craft.
@ffi.Packed(1)
final class VoidSowerEnemyFFI extends ffi.Struct {
  @ffi.Uint32()
  external int entity_id;

  @ffi.Uint16()
  external int assigned_corridor;

  @ffi.Float()
  external double world_pos_x;

  @ffi.Float()
  external double world_pos_y;

  @ffi.Float()
  external double velocity_y;

  @ffi.Float()
  external double current_shields;

  @ffi.Float()
  external double max_shields;

  @ffi.Float()
  external double current_hull;

  @ffi.Float()
  external double max_hull;

  @ffi.Uint8()
  external int vessel_type;

  @ffi.Uint8()
  external int is_destroyed;
}

/// @brief Flat C representation of an active particle lance beam.
@ffi.Packed(1)
final class VoidSowerLanceFFI extends ffi.Struct {
  @ffi.Uint8()
  external int firing_bay_index;

  @ffi.Float()
  external double origin_x;

  @ffi.Float()
  external double origin_y;

  @ffi.Float()
  external double beam_width;

  @ffi.Float()
  external double sustained_duration;

  @ffi.Float()
  external double remaining_duration;

  @ffi.Float()
  external double total_damage;

  @ffi.Uint8()
  external int active;
}

/// @brief Flat C representation of a secondary radial flak burst.
@ffi.Packed(1)
final class VoidSowerFlakFFI extends ffi.Struct {
  @ffi.Float()
  external double world_pos_x;

  @ffi.Float()
  external double world_pos_y;

  @ffi.Float()
  external double blast_radius;

  @ffi.Float()
  external double area_damage;

  @ffi.Float()
  external double lifetime;

  @ffi.Float()
  external double remaining_lifetime;

  @ffi.Uint8()
  external int active;
}

/// @brief Flat C representation of dreadnought state.
@ffi.Packed(1)
final class VoidSowerDreadnoughtFFI extends ffi.Struct {
  @ffi.Float()
  external double orbital_position_x;

  @ffi.Float()
  external double target_position_x;

  @ffi.Uint32()
  external int reserve_cores;

  @ffi.Float()
  external double boundary_line_y;

  @ffi.Uint8()
  external int is_cascading;

  @ffi.Uint32()
  external int total_score;

  @ffi.Uint8()
  external int current_sim_state;

  @ffi.Uint32()
  external int cores_used;
}

/// @brief Flat C representation of predictive targeting telemetry.
@ffi.Packed(1)
final class VoidSowerPredictionFFI extends ffi.Struct {
  @ffi.Uint8()
  external int terminal_bay;

  @ffi.Int8()
  external int terminal_corridor;

  @ffi.Uint32()
  external int final_mass;

  @ffi.Float()
  external double predicted_damage;

  @ffi.Uint16()
  external int total_cascade_laps;

  @ffi.Uint8()
  external int triggers_lance;

  @ffi.Uint8()
  external int triggers_relay;
}

/// @brief Flat C configuration for procedural wave generation.
@ffi.Packed(1)
final class VoidSowerWaveConfigFFI extends ffi.Struct {
  /// < 0: SectorPatrol, 1: PlanetarySiege, 2: FlagshipBastion
  @ffi.Uint8()
  external int difficulty;

  @ffi.Uint32()
  external int random_seed;

  @ffi.Uint32()
  external int core_budget;

  @ffi.Float()
  external double initial_velocity_y;
}
